[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mixxxdb-python"
version = "1.39.0"
description = "Python ORM library for Mixxx DJ software database management"
readme = "README.md"
authors = [
    { name = "KazuProg", email = "91452566+KazuProg@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["mixxx", "dj", "database", "orm", "music", "library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/KazuProg/mixxxdb-python"
Repository = "https://github.com/KazuProg/mixxxdb-python"
"Bug Tracker" = "https://github.com/KazuProg/mixxxdb-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mixxxdb*"]